# int-crucible

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  README.md  VERIFICATION_GUIDE.md  alembic.ini  issues.md  pyproject.toml  pytest.ini  scratchpad.md  setup_backend.sh  start_server.sh  todo.md  verify_setup.sh
alembic/: env.py
alembic/versions/: 5c7b9a3e3c5a_run_audit_metadata.py  6a9abf0029cd_problem_spec_provenance.py  6d8351a91e23_fix_assistant_role_to_agent_in_messages.py  a3d1c7e53b34_run_observability_fields.py  b88f38b6830a_initial_crucible_schema.py  cf03659c04c2_add_snapshots_table.py  e900a34872ac_add_chat_session_id_to_runs.py
crucible/: __init__.py  config.py
crucible/agents/: __init__.py  designer_agent.py  evaluator_agent.py  feedback_agent.py  guidance_agent.py  problemspec_agent.py  scenario_generator_agent.py  worldmodeller_agent.py
crucible/api/: __init__.py  main.py
crucible/cli/: __init__.py  main.py
crucible/core/: __init__.py  provenance.py  tool_calling.py  tools.py
crucible/db/: __init__.py  models.py  repositories.py  session.py
crucible/models/: run_contracts.py
crucible/services/: __init__.py  designer_service.py  evaluator_service.py  feedback_service.py  guidance_service.py  issue_service.py  problemspec_service.py  ranker_service.py  run_preflight_service.py  run_service.py  run_verification.py  scenario_service.py  snapshot_service.py  worldmodel_service.py
crucible/utils/: __init__.py  llm_usage.py
docs/: architecture.md  candidate-scenario-schema.md  design.md  domain-model-sketch.md  requirements.md  snapshot-testing.md  stories.md  temp-kosmos-integration.md  temp-specification.md  temp-story-map.md  temp-workflow.md  testing-story-003.md  tool-calling-architecture.md  world-model-schema.md
docs/issues/: .gitkeep  issue-001-message-role-enum-mismatch.md  issue-template.md  (+6 more)
frontend/: README.md  next.config.ts  package-lock.json  package.json
scripts/: test_e2e_008b.py  test_problemspec_flow.py  test_snapshot_018.py  validate_ranking_explanations.py
tests/: __init__.py  conftest.py
(+84 files in other folders)
